Magick.NET.Native/MagickImage.h


MAGICK_NET_EXPORT void MagickImage_Interpolate_Set(Image *, const size_t);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_IsOpaque_Get(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT double MagickImage_MeanErrorPerPixel_Get(const Image *);


MAGICK_NET_EXPORT double MagickImage_NormalizedMaximumError_Get(const Image *);


MAGICK_NET_EXPORT double MagickImage_NormalizedMeanError_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_Orientation_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Orientation_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_RenderingIntent_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_RenderingIntent_Set(Image *, const size_t);


MAGICK_NET_EXPORT RectangleInfo *MagickImage_Page_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Page_Set(Image *, const RectangleInfo *);


MAGICK_NET_EXPORT size_t MagickImage_Quality_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Quality_Set(Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_ReadMask_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ReadMask_Set(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ResolutionUnits_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ResolutionUnits_Set(Image *, const  size_t);


MAGICK_NET_EXPORT double MagickImage_ResolutionX_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ResolutionX_Set(Image *, const  double);


MAGICK_NET_EXPORT double MagickImage_ResolutionY_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ResolutionY_Set(Image *, const double);


MAGICK_NET_EXPORT const char *MagickImage_Signature_Get(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_TotalColors_Get(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_VirtualPixelMethod_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_VirtualPixelMethod_Set(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_Width_Get(const Image *);


MAGICK_NET_EXPORT Image *MagickImage_WriteMask_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_WriteMask_Set(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveBlur(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveResize(const Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveSharpen(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveThreshold(const Image *, const size_t, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AddNoise(Image *, const size_t, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AddProfile(Image *, const char *, const unsigned char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AffineTransform(Image *, const double, const double, const double, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Annotate(Image *, const DrawInfo *, char *, char *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AnnotateGravity(Image *, const DrawInfo *, char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AutoGamma(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AutoLevel(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AutoOrient(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_BlackThreshold(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_BlueShift(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Blur(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Border(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_BrightnessContrast(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_CannyEdge(const Image *, const double, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ChannelOffset(const Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_Charcoal(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Chop(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Clamp(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ClampChannel(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Clip(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ClipPath(Image *, const char *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Clone(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Clut(Image *, Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ColorDecisionList(Image *, const char *, ExceptionInfo **);